RESOLVED FIXED22959
Memory leak in soup during loading & unloading an URL
https://bugs.webkit.org/show_bug.cgi?id=22959
Summary Memory leak in soup during loading & unloading an URL
Dhananjoy Chutia
Reported 2008-12-22 01:47:58 PST
Hi, I compiled WebKit-r39433 with configuration option --with-target=x11 --with-http-backend=soup. I created a page to refresh at interval of 2000ms with the following source code: <html> <script> function callme() { setTimeout(callme2,2000); } function callme2() { window.location.reload(); } </script> <body onload="callme()"> </body> </html> I also observed the VmSize of GtkLauncher and found the following result. Mon Dec 22 14:10:31 IST 2008 webkit: VmSize: 57348 kB Mon Dec 22 14:37:31 IST 2008 webkit: VmSize: 58708 kB I created a patch which shows no leaks for the same above test. I will post it soon. I have also discussed about these leaks in the following thread: https://lists.webkit.org/pipermail/webkit-dev/2008-December/006074.html
Attachments
Memory leak fix for soup (1.16 KB, patch)
2008-12-22 02:10 PST, Dhananjoy Chutia
ddkilzer: review+
Dhananjoy Chutia
Comment 1 2008-12-22 02:10:10 PST
Created attachment 26198 [details] Memory leak fix for soup Here is my observation for the same test, after applying the patch. Mon Dec 22 15:01:54 IST 2008 webkit: VmSize: 56972 kB Mon Dec 22 15:23:54 IST 2008 webkit: VmSize: 56972 kB It can be seen that there is no leak happened during this test.
David Kilzer (:ddkilzer)
Comment 2 2008-12-22 08:44:10 PST
Comment on attachment 26198 [details] Memory leak fix for soup Seems sane and well-tested. r=me
David Kilzer (:ddkilzer)
Comment 3 2008-12-22 13:22:21 PST
$ git svn dcommit Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/platform/network/soup/ResourceHandleSoup.cpp Committed r39439 http://trac.webkit.org/changeset/39439
Note You need to log in before you can comment on or make changes to this bug.