2008-12-22  Dhananjoy Chutia  <dhanrd@gmail.com>

Reviewed by David Kilzer.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=22959
        Memory leak fixes for WebKit+soup

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::finishedCallback):

Canonical link: https://commits.webkit.org/31642@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39439 268f45cc-cd09-0410-ab3c-d52691b4dbfc